[package]
authors = ["The Tremor Team"]
description = "Tremor Language Server (Trill)"
edition = "2021"
license = "Apache-2.0"
name = "tremor-language-server"
version = "0.11.7"
exclude = [
    "tremor-www-docs",
    "!tremor-www-docs/docs/tremor-query",
    "tremor-www-docs/docs/tremor-query/grammar",
    "!tremor-www-docs/docs/tremor-script",
    "tremor-www-docs/docs/tremor-script/grammar",
]

[dependencies]

bincode = "1.3"
clap = "3.1"

halfbrown = "0.1"
serde_json = "1.0.79"
# this version of tokio is needed for compatibility with tower-lsp currently
tokio = { version = "1.17", features = [
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tower-lsp = "0.16"

# tremor deps
# FIXME!
tremor-script = { version = "0.11.4", path = '/home/heinz/tremor-runtime/tremor-script', features = [
    "arena-delete",
] }
